syntax = "proto3";
package pro.glide;

option go_package = "github.com/glide-im/glideim/protobuf/gen/pb_im";

message AckRequest {
  int64  seq = 1;
  int64  mid = 2;
  int64  from = 3;
}

message AckGroupMessage {
  int64  gid = 1;
  int64  mid = 2;
  int64  seq = 3;
}

message AckMessage {
  int64  seq = 1;
  int64  mid = 2;
}

message AckNotify {
  int64  mid = 2;
}
