syntax = "proto3";
package pro.glide;

option go_package = "github.com/glide-im/glideim/protobuf/gen/pb_im";
import public 'google/protobuf/any.proto';

message CommMessage {
  int64 ver = 1;
  int64 seq = 2;
  string action = 3;
  optional google.protobuf.Any  data = 4;
  map<string, string> extra = 5;
}

message ChatMessage {
  int64 mid = 1;
  int64 seq = 2;
  int64 from = 3;
  int64 to = 4;
  int32 type = 5;
  string content = 6;
  int64 sendAt = 7;
}

message GroupMessage {
  int64 mid = 1;
  int64 seq = 2;
  int64 from = 3;
  int64 to = 4;
  int32 type = 5;
  string content = 6;
  int64 sendAt = 7;
}

message GroupNotify {
  int64 mid = 1;
  int64 gid = 2;
  int64 seq = 3;
  int64 timestamp = 4;
  int32 type = 5;
  google.protobuf.Any data = 6;
}

message Recall {
  int64 mid = 1;
  int64 recallBy = 2;
}